# load_shifting

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
src/: Overview.py  optimization.py  utils.py
src/data/: spot_with_tariffs.csv
src/etl/: prices.py
src/pages/: Power_Consumption.py  Spot_Prices.py
src/scripts/: experiment.csv  script.py
